Se aplico metodo para que las card se activen cuando halla un cursor

--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
         <article
           class="section__card section__article--border section__card--teatro"
         >
-      
           <div class="section-image-data">
             <h2 class="section__title section__title--card">Teatro</h2>
             <p class="section__text section__text--card">
@@ -139,7 +138,6 @@
         <article
           class="section__card section__article--border section__card--deporte"
         >
-        
           <div class="section-image-data">
             <h2 class="section__title section__title--card">Deporte</h2>
             <p class="section__text section__text--card">
@@ -181,9 +179,7 @@
           <!-- <img src="/assets/imagenes/lectura.jpg" alt="" /> -->
 
           <div class="section-image-data">
-            <h2 class="section__title section__title--card">
-              Lectoescritura
-            </h2>
+            <h2 class="section__title section__title--card">Lectoescritura</h2>
             <p class="section__text section__text--card">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
               natus amet doloremque accusamus alias harum a reiciendis.
