--- a/index.html
+++ b/index.html
@@ -156,8 +156,6 @@
         <article
           class="section__card section__article--border section__card--emprendimiento"
         >
-          <!-- <img src="/assets/imagenes/emprendimiento.jpg" alt="" /> -->
-
           <div class="section-image-data">
             <h2 class="section__title section__title--card">Emprendimiento</h2>
             <p class="section__text section__text--card">
@@ -176,8 +174,6 @@
         <article
           class="section__card section__article--border section__card--lectoescritura"
         >
-          <!-- <img src="/assets/imagenes/lectura.jpg" alt="" /> -->
-
           <div class="section-image-data">
             <h2 class="section__title section__title--card">Lectoescritura</h2>
             <p class="section__text section__text--card">
@@ -195,7 +191,55 @@
       </section>
       <!-- Proyectos section ends  -->
 
-      <section id="contactenos" class="contactenos"></section>
+      <!-- Contacto section starts  -->
+      <section id="contactenos" class="section input__color">
+        <form class="section__container-form">
+          <div class="section__inputBox">
+            <i class="fa-solid fa-user section__inputBox-icon"></i>
+            <input
+              class="section__input"
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Nombre y apellido"
+            />
+          </div>
+
+          <div class="section__inputBox">
+            <i class="fa-solid fa-envelope section__inputBox-icon"></i>
+            <input
+              class="section__input"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Email"
+            />
+          </div>
+
+          <div class="section__inputBox">
+            <i class="fa-solid fa-phone section__inputBox-icon"></i>
+            <input
+              class="section__input"
+              type="number"
+              name="number"
+              id="number"
+              placeholder="Numer telefonico"
+            />
+          </div>
+
+          <div class="section__inputBox">
+            <textarea
+              class="section__input"
+              name="message"
+              id="message"
+              cols="30"
+              rows="10"
+              placeholder="Mensaje..."
+            ></textarea>
+          </div>
+        </form>
+      </section>
+      <!-- Contacto section ends  -->
     </main>
 
     <footer></footer>
