Se agrego mapa al formulario

--- a/index.html
+++ b/index.html
@@ -192,7 +192,14 @@
       <!-- Proyectos section ends  -->
 
       <!-- Contacto section starts  -->
-      <section id="contactenos" class="section input__color">
+      <section id="contactenos" class="section section--contacto">
+        <iframe
+          class="section__map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4736.208462256714!2d-76.50270662569224!3d3.4324941558958977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30a71d2a308479%3A0x31b98fb77d22871a!2sInstituto%20T%C3%A9cnico%20Comercial%20Hernando%20Navia%20Var%C3%B3n!5e0!3m2!1ses!2sco!4v1672786754309!5m2!1ses!2sco"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+
         <form class="section__container-form">
           <div class="section__inputBox">
             <i class="fa-solid fa-user section__inputBox-icon"></i>
@@ -233,7 +240,7 @@
               name="message"
               id="message"
               cols="30"
-              rows="10"
+              rows="5"
               placeholder="Mensaje..."
             ></textarea>
           </div>
