se culmino seción contacto

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
           <div class="section__inputBox">
             <textarea
-              class="section__input"
+              class="section__input section__input--size"
               name="message"
               id="message"
               cols="30"
@@ -249,7 +249,7 @@
       <!-- Contacto section ends  -->
     </main>
 
-    <footer></footer>
+    <footer class="footer"></footer>
 
     <script src="/js/scripts.js"></script>
   </body>
