Se agrego boton al formulario

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/styles/styles.css" />
-    <title>Document</title>
+    <title>I.T.C HERNANDO NAVIA VARÓN</title>
   </head>
   <body>
     <!-- header section starts  -->
@@ -244,23 +244,28 @@
               placeholder="Mensaje..."
             ></textarea>
           </div>
+
+          <input
+            type="submit"
+            class="button"
+            name="button"
+            id="button"
+          />
         </form>
       </section>
       <!-- Contacto section ends  -->
     </main>
 
     <footer class="footer">
-      <div class="footer__container">
-        <p class="footer__tittle">I.T.C HERNANDO NAVIA VARÓN</p>
-        <address class="footer__adress">
-          Cra. 26p #50 39, Nueva Floresta, Cali, Valle del Cauca<br />
-          602 4445597
-        </address>
+      <p class="footer__tittle">I.T.C HERNANDO NAVIA VARÓN</p>
+      <address class="footer__adress">
+        Cra. 26p #50 39, Nueva Floresta, Cali, Valle del Cauca<br />
+        Tel: 602 444 5597
+      </address>
 
-        <small class="footer__small">
-          Copyright &#169; 2023 JOLGO. All right reserved .
-        </small>
-      </div>
+      <small class="footer__small">
+        Copyright &#169; 2023 JOLGO. All right reserved .
+      </small>
     </footer>
 
     <script src="/js/scripts.js"></script>
