se modifico ruta a las imagenes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#">
           <img
             class="header__logo"
-            src="/assets/imagenes/logo.png"
+            src="./assets/imagenes/logo.png"
             alt="logo_HNV"
           />
         </a>
@@ -88,7 +88,7 @@
           <h2 class="section__title section__title--big">Visión y Misión</h2>
           <img
             class="section__img"
-            src="/assets/imagenes/nuestro_impacto_img.webp"
+            src="./assets/imagenes/nuestro_impacto_img.webp"
             alt="img--Mujer-Afro"
           />
           <p class="section__text">
@@ -108,7 +108,7 @@
           </p>
           <img
             class="section__img"
-            src="/assets/imagenes/ferias_img.webp"
+            src="./assets/imagenes/ferias_img.webp"
             alt="img-Personas-festejando"
           />
         </article>
