Se modifico ruta al logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#">
           <img
             class="header__logo"
-            src="./assets/imagenes/logo.png"
+            src="../assets/imagenes/logo.png"
             alt="logo_HNV"
           />
         </a>
