agrego nueva ruta a styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       src="https://kit.fontawesome.com/83af84bc01.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
     <title>I.T.C HERNANDO NAVIA VARÓN</title>
   </head>
   <body>
